--- a/gato1.html
+++ b/gato1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="pagina1.html"> Inicio &gt; Volver a perros</a>
+    <a href="pagina1.html"> Inicio &gt; Volver a gatos</a>
     <p></p>
     <img src="https://media.istockphoto.com/id/1172290687/es/foto/navegaci%C3%B3n-de-gatos-en-internet.jpg?s=1024x1024&w=is&k=20&c=YspeV2i1YrUiOHkkSDnn-ongWeuhtHVLi-hz6G39GCY=" alt="gato1" width="250" height="160" ALIGN="middle">
     <ul> <p>Nombre: gaturro </p> 
