--- a/gato2.html
+++ b/gato2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="pagina1.html"> Inicio &gt; Volver a perros</a>
+    <a href="pagina1.html"> Inicio &gt; Volver a gatos</a>
     <p></p>
     <img src="https://media.istockphoto.com/id/916511842/es/foto/hermoso-gato-amarillo-joven-de-la-maine-coon-trabajando-en-ordenador-port%C3%A1til.jpg?s=1024x1024&w=is&k=20&c=Tb_mW6Y5CULRYTSjLnO3mr37paUe0vQKVqtgnfjhHXA=" alt="perro1" width="250" height="160" ALIGN="middle"> 
     <ul> <p>Nombre: patitas </p> 
