--- a/gato3.html
+++ b/gato3.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="pagina1.html"> Inicio &gt; Volver a perros</a>
+    <a href="pagina1.html"> Inicio &gt; Volver a gatos</a>
     <p></p>
     <img src="https://media.istockphoto.com/id/1267469426/es/foto/gato-y-un-mont%C3%B3n-de-cables-ro%C3%ADdos.jpg?s=1024x1024&w=is&k=20&c=M8ygQ33eP9r1Aqx3b9O5QLlYZyHK0bWQ_g1zbKz0sRQ=" alt="perro1" width="250" height="160" ALIGN="middle"> 
     <ul> <p>Nombre: lindito </p> 
